Added Dynamicity to Clock through messages and dynamic elements

--- a/clock.html
+++ b/clock.html
@@ -54,10 +54,10 @@
         </div>
 
         <div class="time-quote">
-            <p class="quotes">Grab some Healthy BreakFast!!!</p>
+            <p id="quotes">Grab some Healthy BreakFast!!!</p>
         </div>
 
-        <div class="timer-picture">
+        <div id="timer-picture">
 
         </div>
 
@@ -192,8 +192,8 @@
         </div>
 
         <div class="time-message-content">
-            <button class="set-alarm">
-                <label class="button-text">Set Alarm</label>
+            <button class="set-alarm" onclick="setAlarm()">
+                <label id="button-text">Set Alarm</label>
             </button>
         </div>
 
