Added missing time slot 12am-1am

--- a/clock.html
+++ b/clock.html
@@ -98,6 +98,7 @@
                         <option value="21">9 PM - 10 PM</option>
                         <option value="22">10 PM - 11 PM</option>
                         <option value="23">11 PM - 12 AM</option>
+                        <option value="24">12 AM - 1 AM</option>
                     </select>
                 </div>
                 <div class="Afternoon">
@@ -127,6 +128,7 @@
                         <option value="21">9 PM - 10 PM</option>
                         <option value="22">10 PM - 11 PM</option>
                         <option value="23">11 PM - 12 AM</option>
+                        <option value="24">12 AM - 1 AM</option>
                     </select>
                 </div>
                 <div class="Evening">
@@ -156,6 +158,7 @@
                         <option value="21">9 PM - 10 PM</option>
                         <option value="22">10 PM - 11 PM</option>
                         <option value="23">11 PM - 12 AM</option>
+                        <option value="24">12 AM - 1 AM</option>
                     </select>
                 </div>
                 <div class="Night">
@@ -185,6 +188,7 @@
                         <option value="21">9 PM - 10 PM</option>
                         <option value="22">10 PM - 11 PM</option>
                         <option value="23">11 PM - 12 AM</option>
+                        <option value="24">12 AM - 1 AM</option>
                     </select>
                 </div>
             </div>
